--- a/app/src/main/res/layout/row_shop.xml
+++ b/app/src/main/res/layout/row_shop.xml
@@ -15,13 +15,13 @@
             android:id="@+id/shopIV"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
-            android:layout_centerVertical="true"
             android:src="@drawable/ic_store_gray"
             app:c_border="true"
-            app:c_border_width="1dp"
-            app:c_border_color="@color/colorGray02"/>
+            app:c_border_color="@color/colorGray02"
+            app:c_border_width="1dp" />
 
         <ImageView
             android:id="@+id/onlineIV"
